--- a/ConstructionMS/Views/Products/Details.cshtml
+++ b/ConstructionMS/Views/Products/Details.cshtml
@@ -496,8 +496,23 @@
                                                         @Html.DisplayNameFor(model => model.ProductImage)
                                                     </dt>
 
+
+                                                    @*Add image for detail*@
                                                     <dd>
-                                                        @Html.DisplayFor(model => model.ProductImage)
+                                                        @Html.DisplayFor(model => model.ImageUpload)
+                                                        @if (item.ImageUpload != null)
+                                                        {
+                                                            var base64 = Convert.ToBase64String(item.ImageUpload);
+                                                            var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
+
+                                                            <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" width="150" height="125" />
+                                                        }
+                                                        else
+                                                        {
+                                                            <img src="~/App_Data/uploads/Capture.JPG"
+                                                                 style="max-width:100px;max-height:100px" / >
+                                                        }
+
                                                     </dd>
 
                                                     <dt>
