--- a/ConstructionMS/Views/Products/Index.cshtml
+++ b/ConstructionMS/Views/Products/Index.cshtml
@@ -221,12 +221,10 @@
                         </div>
                     </form>
 
-                    <form asp-controller="Products" asp-action="Index1">
-                        <p>
-                            Title: <input type="text" name="SearchString">
-                            <input type="submit" value="Filter" />
-                        </p>
-                    </form>
+                    <p>
+                        Find by name: @Html.TextBox("SearchString")
+                        <input type="submit" value="Search" />
+                    </p>
 
                     <!-- Topbar Navbar -->
                     <ul class="navbar-nav ml-auto">
@@ -481,19 +479,32 @@
                                             <td>
                                                 @*@Html.DisplayFor(modelItem => item.ImageUpload)*@
                                                 @*@{
-                var base64 = Convert.ToBase64String(item.ImageUpload);
-                var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
-            }*@
-                                
-                                                <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" width="150" height="125" />
-                                              
+            var base64 = Convert.ToBase64String(item.ImageUpload);
+            var imgsrc = string.Format("data:image/gif;base64,{0}", base64);
+        }*@
+
+                                                @*<img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" width="150" height="125" />*@
+
+                                                @if (item.ImageUpload != null)
+                                                {
+                                                    var base64 = Convert.ToBase64String(item.ImageUpload);
+                                                    var imgsrc = string.Format("data:image/jpg;base64,{0}", base64);
+                                                  
+                                                    <img src="data:image;base64,@System.Convert.ToBase64String(item.ImageUpload)" alt="" width="150" height="125" />
+                                                }
+                                                else
+                                                {
+                                                    <img src="~/App_Data/uploads/Capture.JPG"
+                                                         style="max-width:100px;max-height:100px" / >
+                                                }
+
                                             </td>
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.ProductName)
                                             </td>
                                             @*<td>
-                                                @Html.DisplayFor(modelItem => item.CategoryType)
-                                            </td>*@
+            @Html.DisplayFor(modelItem => item.CategoryType)
+        </td>*@
 
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.ProductCode)
@@ -504,7 +515,7 @@
                                             <td>
                                                 @Html.DisplayFor(modelItem => item.Status)
                                             </td>
-                                           
+
                                             @*<td>
             @Html.DisplayFor(modelItem => item.Material)
         </td>
@@ -523,9 +534,15 @@
                                                 @*button Delete*@
                                                 @Html.ActionLink("Xóa", "Delete", new { id = item.ProductID }, new { @class = "btn btn-danger" })
 
-                                                @*@Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |*@
-                                                @*<button onclick="@Url.Action("Edit", "Edit", new {id = item.ProductID })">Edit</button>*@
-                                                @*@Html.ActionLink("Details", "Details", new { id = item.ProductID }) |*@
+                                            <th>
+                                                @Html.ActionLink("Last Name", "Index", new { sortOrder = ViewBag.NameSortParm })
+                                            </th>
+
+                                          
+
+                                            @*@Html.ActionLink("Edit", "Edit", new { id = item.ProductID }) |*@
+                                            @*<button onclick="@Url.Action("Edit", "Edit", new {id = item.ProductID })">Edit</button>*@
+                                            @*@Html.ActionLink("Details", "Details", new { id = item.ProductID }) |*@
 
 
 
